--- a/index.html
+++ b/index.html
@@ -7,13 +7,29 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script defer src="js/vue.min.js"></script>
     <script defer src="js/main.js"></script>
+    <link rel="stylesheet" href="css/main.css">
     <title>Product App</title>
 </head>
 <body>
-<div id="app">
-    <h1>{{ product }}</h1>
-    <p>{{description}}</p>
-</div>
+
+
+    <div id="app">
+        <div class="product">
+
+            <div class="product-image">
+                <img alt="#" :src="image" :alt="altText"/>
+            </div>
+
+            <div class="product-info">
+                <h1>{{ product }}</h1>
+                <p>{{description}}</p>
+                <a href="https://www.amazon.com/s/ref=nb_sb_noss?url=search-alias%3Daps&field-keywords=socks">{{link}}</a>
+            </div>
+
+        </div>
+    </div>
+
+
 
 </body>
 </html>
