--- a/index.html
+++ b/index.html
@@ -24,9 +24,16 @@
                 <p v-else>Out of Stock</p>
                 <span v-if="OnSale">On Sale</span>
                 <div v-for="variant in variants" :key="variant.variantId">
-                    <p>{{ variant.variantColor }}</p>
+                    <p @mouseover="updateProduct(variant.variantImage)">
+                        {{ variant.variantColor }}
+                    </p>
                 </div>
                 <li v-for="size in sizes">{{size}}</li>
+                <div class="cart">
+                    <p>Cart({{ cart }})</p>
+                    <button v-on:click="addToCart">Add to cart</button>
+                    <button v-on:click="ubratOnCart">Ubrat from cart</button>
+                </div>
             </div>
         </div>
     </div>
