--- a/index.html
+++ b/index.html
@@ -21,17 +21,22 @@
                 <p>{{description}}</p>
                 <a href="https://www.amazon.com/s/ref=nb_sb_noss?url=search-alias%3Daps&field-keywords=socks">{{link}}</a>
                 <p v-if="inStock">In Stock</p>
-                <p v-else>Out of Stock</p>
+                <p :class="{ line: !inStock }" >Out of Stock</p>
                 <span v-if="OnSale">On Sale</span>
-                <div v-for="variant in variants" :key="variant.variantId">
-                    <p @mouseover="updateProduct(variant.variantImage)">
-                        {{ variant.variantColor }}
-                    </p>
+                <div v-for="variant in variants" :key="variant.variantId"
+                     class="color-box"
+                     v-for="variant in variants"
+                     :key="variant.variantId"
+                     :style="{ backgroundColor:variant.variantColor }"
+                     @mouseover="updateProduct(variant.variantImage)">
+
+
+
                 </div>
                 <li v-for="size in sizes">{{size}}</li>
                 <div class="cart">
                     <p>Cart({{ cart }})</p>
-                    <button v-on:click="addToCart">Add to cart</button>
+                    <button v-on:click="addToCart"  :class="{ disabledButton: !inStock }">Add to cart</button>
                     <button v-on:click="ubratOnCart">Ubrat from cart</button>
                 </div>
             </div>
