--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
                 <img alt="#" :src="image" :alt="altText"/>
             </div>
             <div class="product-info">
-                <h1>{{ product }}</h1>
+                <h1>{{ title }}</h1>
                 <p>{{description}}</p>
                 <a href="https://www.amazon.com/s/ref=nb_sb_noss?url=search-alias%3Daps&field-keywords=socks">{{link}}</a>
                 <p v-if="inStock">In Stock</p>
                 <p :class="{ line: !inStock }" >Out of Stock</p>
-                <span v-if="OnSale">On Sale</span>
+                <span v-if="onSale">On Sale</span>
                 <div v-for="variant in variants" :key="variant.variantId"
                      class="color-box"
                      v-for="variant in variants"
@@ -39,6 +39,7 @@
                     <button v-on:click="addToCart"  :class="{ disabledButton: !inStock }">Add to cart</button>
                     <button v-on:click="ubratOnCart">Ubrat from cart</button>
                 </div>
+                <span>{{ sale }}</span>
             </div>
         </div>
     </div>
